@@ -3,6 +3,8 @@ Czech.pm
 examples/ex1.pl
 examples/ex2.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -17,11 +19,11 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Acme-CPANAuthors-Czech/00-use.t
-t/Acme-CPANAuthors-Czech/01-version.t
-t/Acme-CPANAuthors-Czech/02-pod_coverage.t
-t/Acme-CPANAuthors-Czech/03-pod.t
-t/Acme-CPANAuthors-Czech/04-new.t
-t/Acme-CPANAuthors-Czech/05-authors.t
-t/Acme-CPANAuthors-Czech/06-count.t
-t/Acme-CPANAuthors-Czech/07-id.t
+t/Acme-CPANAuthors-Czech/01-use.t
+t/Acme-CPANAuthors-Czech/02-version.t
+t/Acme-CPANAuthors-Czech/03-new.t
+t/Acme-CPANAuthors-Czech/04-authors.t
+t/Acme-CPANAuthors-Czech/05-count.t
+t/Acme-CPANAuthors-Czech/06-id.t
+xt/Acme-CPANAuthors-Czech/01-pod_coverage.t
+xt/Acme-CPANAuthors-Czech/02-pod.t
