@@ -1,4 +1,5 @@
 0.19
+ - Move author tests to xt/ directory.
 
 0.18 2015-08-25T00:53:50+02:00
  - Add TYNOVSKY CPAN account.
